--- a/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj
+++ b/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj
@@ -119,6 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -135,6 +136,9 @@
     <ClCompile Include="p04.cpp" />
     <ClCompile Include="p05.cpp" />
     <ClCompile Include="p07.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="thread_pool.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
