--- a/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj.filters
+++ b/C++_Concurrency/C++_Concurrency_In_Action/C++_Concurrency_In_Action.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="p07.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="p08.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="thread_pool.h">
